added scroll animation

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -7,14 +7,14 @@
         <div class="container">
             <div class="about__inner">
                 <div class="about__top">
-                    <h1 class="about__title">ABOUT</h1>
-                    <img class="about__top-img" src="../images/about-img-1.jpg" alt="image">
+                    <h1 class="about__title" data-aos="fade-left">ABOUT</h1>
+                    <img class="about__top-img" src="../images/about-img-1.jpg" alt="image" data-aos="fade-up">
                 </div>
                 <div class="about__bottom">
-                    <img class="about__bottom-img" src="../images/about-img-2.jpg" alt="image">
+                    <img class="about__bottom-img" src="../images/about-img-2.jpg" alt="image" data-aos="fade-up">
                     <div class="about__bottom-text">Set in 2016, this coming-of-age drama series from Luca Guadagnino (Call Me by Your Name) follows two American teenagers as they explore their true identities while living on a military base in the seaside town of Chioggia, Italy.</div>
                 </div>          
-                <div class="about__trailer">
+                <div class="about__trailer" data-aos="fade-up">
                     <div class="about__trailer-wrap">
                         <a id='video_player' class="about__trailer-play" href="https://www.youtube.com/watch?v=zslamAqw3BQ" data-fancybox>
                             <!-- <img class="about__trailer-imgBtn" src="@img/play_button.svg" alt="Play Button"> -->
@@ -33,37 +33,37 @@
     <section class="cast-crew --cast-crew-section">
         <div class="container">
             <div class="cast-crew__inner">
-                <h1 class="cast-crew__title">CAST & CREW</h1>
+                <h1 class="cast-crew__title" data-aos="fade-right">CAST & CREW</h1>
                 <div class="cast-crew__main">
-                    <div class="cast-crew__item">
+                    <div class="cast-crew__item" data-aos="fade-right">
                         <div class="cast-crew__item-character">Fraser Wilson</div>
                         <div class="cast-crew__item-actor">
                             <img class="cast-crew__item-photo" src="../images/actor-jack.webp" alt="actor">
                             <div class="cast-crew__item-name">Jack Dylan Grazer</div>
                         </div>
                     </div>
-                    <div class="cast-crew__item">
+                    <div class="cast-crew__item" data-aos="fade-right">
                         <div class="cast-crew__item-character">Caitlin Poythress</div>
                         <div class="cast-crew__item-actor">
                             <img class="cast-crew__item-photo" src="../images/actor-jordan.webp" alt="actor">
                             <div class="cast-crew__item-name">Jordan Kristine Seamón</div>
                         </div>
                     </div>
-                    <div class="cast-crew__item">
+                    <div class="cast-crew__item" data-aos="fade-right">
                         <div class="cast-crew__item-character">Sarah Wilson</div>
                         <div class="cast-crew__item-actor">
                             <img class="cast-crew__item-photo" src="../images/actor-chloe.webp" alt="actor">
                             <div class="cast-crew__item-name">Chloë Sevigny</div>
                         </div>
                     </div>
-                    <div class="cast-crew__item">
+                    <div class="cast-crew__item" data-aos="fade-right">
                         <div class="cast-crew__item-character">Maggie Teixeira</div>
                         <div class="cast-crew__item-actor">
                             <img class="cast-crew__item-photo" src="../images/actor-alice.webp" alt="actor">
                             <div class="cast-crew__item-name">Alice Braga</div>
                         </div>
                     </div>
-                    <div class="cast-crew__item">
+                    <div class="cast-crew__item" data-aos="fade-right">
                         <div class="cast-crew__item-character">Richard Poythress</div>
                         <div class="cast-crew__item-actor">
                             <img class="cast-crew__item-photo" src="../images/actor-scott.webp" alt="actor">
@@ -85,10 +85,10 @@
     <section class="episodes --episodes-section">
         <div class="container">
             <div class="episodes__inner">
-                <h1 class="episodes__title">EPISODES</h1>
+                <h1 class="episodes__title" data-aos="fade-right">EPISODES</h1>
                 <div class="episodes__main">
                     <!-- item1 -->
-                    <div class="episodes__item">
+                    <div class="episodes__item" data-aos="fade-right">
                         <div class="episodes__videos">
                             <div class="episodes__videos-main">
                                 <img class="episodes__videos-main-img" src="../images/ep1-video-img.webp" alt="ep1">
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <!-- item2 -->
-                    <div class="episodes__item">
+                    <div class="episodes__item" data-aos="fade-right">
                         <div class="episodes__videos">
                             <div class="episodes__videos-main">
                                 <img class="episodes__videos-main-img" src="../images/ep2-video-img.webp" alt="ep2">
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                     <!-- item3 -->
-                    <div class="episodes__item">
+                    <div class="episodes__item" data-aos="fade-right">
                         <div class="episodes__videos">
                             <div class="episodes__videos-main">
                                 <img class="episodes__videos-main-img" src="../images/ep3-video-img.webp" alt="ep3">
@@ -249,10 +249,10 @@
         <div class="container">
             <div class="watch-banner__inner">
                 <div class="watch-banner__left">
-                    <div class="watch-banner__left-title">wahwa</div>
+                    <div class="watch-banner__left-title" data-aos="fade-right" data-aos-delay="200">wahwa</div>
                 </div>
                 <div class="watch-banner__right">
-                    <div class="watch-banner__right-title">watch</div>
+                    <div class="watch-banner__right-title" data-aos="fade-left" data-aos-delay="500">watch</div>
                     <div class="watch-banner__right-info">
                         <span class="watch-banner__right-info-text">the first episode is streaming now</span>
                         <a class="watch-banner__right-info-btn" href="https://www.hulu.com/series/we-are-who-we-are-75613c68-7e4d-4dbe-bcd5-c17c8fd4a5f6" target="_blank" rel="noopener noreferrer">
@@ -268,14 +268,14 @@
     <section class="photos --photos-section">
         <div class="container">
             <div class="photos__inner">
-                <h1 class="photos__title">PHOTO</h1>
+                <h1 class="photos__title" data-aos="fade-up">PHOTO</h1>
                 <div class="photos__items">
-                    <img class="photos__item" src="../images/photo-1.webp" alt="photo">
-                    <img class="photos__item" src="../images/photo-2.webp" alt="photo">
-                    <img class="photos__item" src="../images/photo-4.webp" alt="photo">
-                    <img class="photos__item" src="../images/photo-3.webp" alt="photo">
-                    <img class="photos__item" src="../images/photo-5.webp" alt="photo">
-                    <img class="photos__item" src="../images/photo-6.webp" alt="photo">
+                    <img class="photos__item" src="../images/photo-1.webp" alt="photo" data-aos="fade-up">
+                    <img class="photos__item" src="../images/photo-2.webp" alt="photo" data-aos="fade-up">
+                    <img class="photos__item" src="../images/photo-4.webp" alt="photo" data-aos="fade-up">
+                    <img class="photos__item" src="../images/photo-3.webp" alt="photo" data-aos="fade-up">
+                    <img class="photos__item" src="../images/photo-5.webp" alt="photo" data-aos="fade-up">
+                    <img class="photos__item" src="../images/photo-6.webp" alt="photo" data-aos="fade-up">
                 </div>
             </div>
         </div>
@@ -285,14 +285,14 @@
     <section class="follow-us">
         <div class="container">
             <div class="follow-us__inner">
-                <h1 class="follow-us__title">FOLLOW US</h1>
+                <h1 class="follow-us__title" data-aos="fade-left">FOLLOW US</h1>
                 <span class="follow-us__insta">@wearewhoweare on Instagram</span>
                 <div class="follow-us__gallery">
                     <div class="follow-us__gallery-photos">
-                        <img class="follow-us__gallery-photos-item" src="../images/photo-7.webp" alt="photo">
-                        <img class="follow-us__gallery-photos-item" src="../images/photo-8.webp" alt="photo">
-                        <img class="follow-us__gallery-photos-item" src="../images/photo-9.webp" alt="photo">
-                        <img class="follow-us__gallery-photos-item" src="../images/photo-10.webp" alt="photo">
+                        <img class="follow-us__gallery-photos-item" src="../images/photo-7.webp" alt="photo" data-aos="fade-left">
+                        <img class="follow-us__gallery-photos-item" src="../images/photo-8.webp" alt="photo" data-aos="fade-left" data-aos-delay="500">
+                        <img class="follow-us__gallery-photos-item" src="../images/photo-9.webp" alt="photo" data-aos="fade-left">
+                        <img class="follow-us__gallery-photos-item" src="../images/photo-10.webp" alt="photo" data-aos="fade-left" data-aos-delay="500">
                     </div>
                     <a class="video-playBtn follow-us__gallery-btn" href="http://instagram.com/wearewhoweare" target="_blank" rel="noopener noreferrer">
                         <span>FOLLOW NOW</span>
